# vosu

./: README.md
backend/: .env  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
backend/app/: diarization.yaml  diarize.py  main.py
backend/data/: 14d9874e47844587a1773425c0bace60_transcript.txt  41e929809f6d4b0b8af2f50e8eb6e833_transcript.txt  56ee38f317b34315a9c81fd4bc7322ce_transcript.txt
frontend/src/: App.css  App.jsx
